Archive/132db957ccfb4a2448581753d501fa7c-93e6c6235a92d0c233f44beab03470ad/output
main.cpp:61:55: error: no matching function for call to 'build_character'
        character = qi::token(CHARACTER) [ qi::_val = build_character(*phoenix::begin(qi::_1)) ] // ] // or *phoenix::begin(qi::_1) for the actual character
                                                      ^~~~~~~~~~~~~~~
main.cpp:30:6: note: candidate function not viable: no known conversion from 'actor<typename as_composite<dereference_eval, actor<composite<function_eval<1>, vector<value<begin>, argument<0>, void_, void_, void_, void_, void_, void_, void_, void_> > > >::type>' to 'char' for 1st argument
char build_character(char c)
     ^
1 error generated.
